Give the AllocationStatus a fixed height to avoid page jumping
Whilst the data loads, the screen space is just one line. Once the data
loads it is much higher, and moves all the elements below it. This'll
definitely be annoying as all hell when you accidentally deploy the
wrong job spec.

--- a/app/javascript/styles/index.sass
+++ b/app/javascript/styles/index.sass
@@ -102,6 +102,7 @@ h5
   .AllocationStatus-container
     flex-grow: 0
     flex-basis: 250px
+    height: 50px;
 
 // Components
 ////////////////////////////////////////////////////////////////////////////////
